# RustTable

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  TASK.md  deny.toml  justfile  package.json  rust-toolchain.toml
crates/rusttable-ai/: Cargo.toml
crates/rusttable-ai/src/: cache.rs  color.rs  contracts.rs  inference.rs  lib.rs  model.rs  package.rs  planning.rs  qualification.rs  registry.rs  rgb_service.rs  tiff.rs  types.rs  workflow.rs  workflows.rs
crates/rusttable-ai/tests/: model_registry.rs  raw_bayer_workflow.rs  rgb_denoise_workflow.rs  rgb_processing.rs  rgb_service.rs  super_resolution_workflow.rs
crates/rusttable-app/: Cargo.toml
crates/rusttable-app/src/: action_button.rs  ai_services.rs  app.rs  bootstrap.rs  darkroom_services.rs  diagnostics.rs  gtk_thumbnail_controller.rs  input.rs  lib.rs  library.rs  library_loader.rs  macos.rs  main.rs  navigation.rs  presentation.rs  preview.rs  theme.rs  ui_smoke.rs  view.rs
crates/rusttable-app/tests/: catalog_preview_smoke.rs  cli.rs  darkroom_shell_runtime_smoke.rs  extension_host.rs  macos_window_contract.rs  native_open_raf_acceptance.rs  preview_service.rs  raw_import_darkroom_smoke.rs  transient_edit_preview.rs
crates/rusttable-catalog/: Cargo.toml
crates/rusttable-catalog-store/: Cargo.toml
crates/rusttable-catalog-store/src/: catalog_repository.rs  codec.rs  edit_repository.rs  export_queue.rs  history_codec.rs  history_repository.rs  import_details_codec.rs  lib.rs  recipe_repository.rs  repository.rs  schema.rs
crates/rusttable-catalog-store/tests/: canonical_encoding.rs  catalog_replay.rs  collection_repository.rs  duplicate_persistence.rs  edit_history_integration.rs  edit_repository_contract.rs  export_queue.rs  export_recipe_store.rs  history_acceptance.rs  history_persistence.rs  import_registration.rs  metadata_repository.rs  organization_repository.rs  photo_groups.rs  repository_conflicts.rs  repository_round_trip.rs  schema_versions.rs  tag_repository.rs  virtual_copies.rs
crates/rusttable-catalog/src/: collections.rs  command.rs  develop.rs  durable_edit.rs  edit_repository.rs  error.rs  import.rs  import_details.rs  lib.rs  metadata.rs  organization.rs  photo_groups.rs  repository.rs  restore.rs  snapshot.rs  source_path.rs  state.rs
crates/rusttable-catalog/tests/: catalog_errors.rs  catalog_registration.rs  catalog_restore.rs  catalog_restore_errors.rs  catalog_snapshot.rs  catalog_snapshot_errors.rs  crate_boundaries.rs  develop_input.rs  develop_input_errors.rs  duplicate_detection.rs  durable_edit_errors.rs  durable_edit_service.rs  edit_replacement.rs  edit_repository_contract.rs  history.rs  history_acceptance.rs  import_repository_contract.rs  import_service.rs  metadata_contract.rs  organization_commands.rs  photo_groups.rs  source_path.rs  tags.rs  virtual_copies.rs
crates/rusttable-color/: Cargo.toml  ICC_PROFILES.md
crates/rusttable-color/src/: chromaticity.rs  lib.rs  matrix.rs  planner.rs  profile.rs  purpose.rs  scalar.rs  space.rs  transfer.rs  transform.rs
crates/rusttable-color/tests/: contracts.rs  foundational_math.rs  icc_profiles.rs
crates/rusttable-compat/: Cargo.toml
crates/rusttable-compat/src/: accounting.rs  history.rs  lib.rs  organization.rs  purpose.rs
crates/rusttable-compat/tests/: darktable_history.rs  darktable_organization.rs
crates/rusttable-core/: Cargo.toml
crates/rusttable-core/src/: id.rs  lib.rs  render.rs  value.rs
crates/rusttable-core/tests/: configuration.rs  edit_model.rs  identifiers.rs  metadata_model.rs  metadata_values.rs  numerics_contract.rs  operation_model.rs  operation_opacity.rs  photo_asset_model.rs  template_engine.rs  value_objects.rs
crates/rusttable-diagnostics/: Cargo.toml
crates/rusttable-diagnostics/src/: context.rs  crash.rs  event.rs  json.rs  lib.rs  privacy.rs  redaction.rs  ring.rs  selected_preview.rs  storage.rs  tracing_adapter.rs
crates/rusttable-diagnostics/tests/: diagnostics_process.rs  source_accounting.rs  structured_diagnostics.rs
crates/rusttable-display-profile/: Cargo.toml
crates/rusttable-display-profile/src/: events.rs  identity.rs  lib.rs  profile.rs  provider.rs  service.rs
crates/rusttable-display-profile/tests/: display_profile.rs
crates/rusttable-export/: Cargo.toml
crates/rusttable-export/src/: artifact.rs  capabilities.rs  contract.rs  errors.rs  hash_helpers.rs  lib.rs  manifest.rs  metadata_policy.rs  png.rs  queue.rs  recipe.rs  recipe_parse.rs
crates/rusttable-export/tests/: avif_heif_encoders.rs  codec_encoders.rs  copy_encoder.rs  disk_destination.rs  encoders.rs  export_contract.rs  export_plan.rs  export_queue.rs  export_recipe.rs  jpeg2000_encoder.rs  jpeg_portable_anymap.rs  openexr_encoder.rs  pdf_xcf_encoder.rs  png_publisher.rs
crates/rusttable-gpu/: Cargo.toml
crates/rusttable-gpu/shaders/: bilateral.wgsl  grain.wgsl  point.wgsl
crates/rusttable-gpu/src/: bilateral.rs  cache.rs  contracts.rs  dispatch.rs  grain.rs  lib.rs  point.rs  purpose.rs  recovery.rs  resource.rs  resource_admin.rs  runtime.rs  submission.rs  tiling.rs  tiling_geometry.rs  tiling_tests.rs  transfer.rs
crates/rusttable-i18n/: Cargo.toml  build.rs
crates/rusttable-i18n/src/: catalog.rs  collation.rs  formatter.rs  lib.rs  locale.rs  search.rs
crates/rusttable-image-io/: Cargo.toml
crates/rusttable-image-io/src/: input.rs  lib.rs  output.rs  raster_samples.rs  raw.rs  registry.rs  source.rs  source_color.rs  svg.rs
crates/rusttable-image-io/tests/: decode_limits.rs  decoder_registry.rs  dng_output.rs  dng_raw.rs  svg.rs  (+24 more)
crates/rusttable-import/: Cargo.toml
crates/rusttable-jpeg2000-native/: Cargo.toml
crates/rusttable-masks/: Cargo.toml
crates/rusttable-metadata/: Cargo.toml
crates/rusttable-parity/: Cargo.toml
crates/rusttable-pixelpipe/: Cargo.toml
crates/rusttable-processing/: Cargo.toml
crates/rusttable-render/: Cargo.toml
crates/rusttable-scripting/: Cargo.toml
crates/rusttable-testkit/: Cargo.toml
crates/rusttable-ui/: Cargo.toml
crates/xtask/: Cargo.toml
(+1411 files in other folders)
