[workspace]
members = [
    "crates/rusttable-app",
    "crates/rusttable-catalog",
    "crates/rusttable-core",
    "crates/rusttable-catalog-store",
    "crates/rusttable-diagnostics",
    "crates/rusttable-image",
    "crates/rusttable-image-io",
    "crates/rusttable-metadata",
    "crates/rusttable-import",
    "crates/rusttable-processing",
    "crates/rusttable-render",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.95"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
