[package]
name = "rusttable-app"
description = "Iced application shell for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
directories.workspace = true
rusttable-catalog.workspace = true
rusttable-catalog-store.workspace = true
rusttable-diagnostics.workspace = true
rusttable-core.workspace = true
rusttable-image.workspace = true
rusttable-image-io.workspace = true
rusttable-render.workspace = true
rusttable-scripting.workspace = true
rusttable-ui.workspace = true

[dev-dependencies]
iced_test.workspace = true
rusttable-import.workspace = true
rusttable-metadata.workspace = true
rusttable-testkit.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
iced = { workspace = true, features = ["wayland", "x11"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
iced.workspace = true

[lints]
workspace = true
