[package]
name = "rusttable-catalog-store"
description = "Transactional embedded persistence adapter for RustTable import records."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
postcard = { version = "=1.1.3", features = ["alloc"] }
redb = "=4.1.0"
rusttable-catalog = { path = "../rusttable-catalog", version = "0.1.0" }
rusttable-core = { path = "../rusttable-core", version = "0.1.0" }
rusttable-image = { path = "../rusttable-image", version = "0.1.0" }
serde = { version = "=1.0.228", features = ["derive"] }

[lints]
workspace = true
