[package]
name = "rusttable-catalog-store"
description = "Transactional embedded persistence adapter for RustTable import records."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
postcard.workspace = true
redb.workspace = true
rusttable-catalog = { path = "../rusttable-catalog", version = "0.1.0" }
rusttable-core = { path = "../rusttable-core", version = "0.1.0" }
rusttable-image = { path = "../rusttable-image", version = "0.1.0" }
serde.workspace = true

[lints]
workspace = true
