[package]
name = "rusttable-catalog"
description = "Catalog state and use cases for RustTable."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rusttable-core = { path = "../rusttable-core", version = "0.1.0" }
rusttable-image = { path = "../rusttable-image", version = "0.1.0" }

[lints]
workspace = true
