[package]
name = "rusttable-catalog"
description = "Catalog state and use cases for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusttable-core.workspace = true
rusttable-image.workspace = true

[lints]
workspace = true
