[package]
name = "rusttable-catalog"
description = "Catalog state and use cases for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusttable-core.workspace = true
rusttable-image.workspace = true
serde.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true

[lints]
workspace = true
