[package]
name = "rusttable-color"
description = "Typed color-space, profile, and transform-plan contracts for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
postcard.workspace = true
serde.workspace = true
sha2.workspace = true

[lints]
workspace = true
