[package]
name = "rusttable-core"
description = "Core foundation for the RustTable rewrite."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sha2.workspace = true
unicode-normalization.workspace = true

[lints]
workspace = true
