[package]
name = "rusttable-diagnostics"
description = "Bounded local diagnostics for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
directories.workspace = true
getrandom.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true
