[package]
name = "rusttable-diagnostics"
description = "Bounded local diagnostics for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
directories.workspace = true
rand.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
