[package]
name = "rusttable-export"
description = "Deterministic logical export artifact planning for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusttable-color.workspace = true
rusttable-core.workspace = true
rusttable-image.workspace = true
rusttable-image-io.workspace = true
sha2.workspace = true

[lints]
workspace = true
