[package]
name = "rusttable-export"
description = "Deterministic logical export artifact planning for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
mozjpeg-rs.workspace = true
png.workspace = true
rusttable-color.workspace = true
rusttable-catalog-store.workspace = true
rusttable-core.workspace = true
rusttable-image.workspace = true
rusttable-image-io.workspace = true
rusttable-import.workspace = true
rusttable-render.workspace = true
rusttable-jxl-native.workspace = true
rusttable-webp-native.workspace = true
rusttable-pixelpipe.workspace = true
sha2.workspace = true
tiff.workspace = true

[lints]
workspace = true
