[package]
name = "rusttable-i18n"
description = "Rust-owned localization, ICU4X formatting, and locale-aware collation."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
fixed_decimal.workspace = true
fluent-bundle.workspace = true
icu_collator.workspace = true
icu_datetime.workspace = true
icu_decimal = { workspace = true, features = ["alloc"] }
icu_list = { workspace = true, features = ["alloc"] }
icu_locale.workspace = true
icu_plurals.workspace = true
unicode-normalization.workspace = true
unic-langid = "=0.9.6"

[build-dependencies]
fluent-syntax.workspace = true

[lints]
workspace = true
