[package]
name = "rusttable-image-io"
description = "Bounded JPEG, PNG, and classic-TIFF file input/output for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
flate2.workspace = true
image.workspace = true
jpeg-decoder.workspace = true
png.workspace = true
resvg.workspace = true
rawler.workspace = true
rusttable-color.workspace = true
rusttable-image.workspace = true
rusttable-metadata.workspace = true
sha2.workspace = true
tiff.workspace = true
usvg.workspace = true

[dev-dependencies]
rusttable-testkit.workspace = true

[lints]
workspace = true
