[package]
name = "rusttable-import"
description = "Bounded single-snapshot image inspection and catalog registration."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusttable-catalog = { path = "../rusttable-catalog", version = "0.1.0" }
rusttable-core = { path = "../rusttable-core", version = "0.1.0" }
rusttable-image = { path = "../rusttable-image", version = "0.1.0" }
rusttable-metadata = { path = "../rusttable-metadata", version = "0.1.0" }
sha2.workspace = true

[dev-dependencies]
rusttable-catalog-store = { path = "../rusttable-catalog-store", version = "0.1.0" }
