[package]
name = "rusttable-parity"
description = "Deterministic darktable feature-parity inventory scanner."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusttable-testkit.workspace = true
serde.workspace = true
sha2.workspace = true
serde_json.workspace = true
toml.workspace = true

[[bin]]
name = "rusttable-parity"
path = "src/main.rs"

[lints]
workspace = true
