[package]
name = "rusttable-pixelpipe"
description = "Pixel pipeline composition boundary for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
rusttable-core.workspace = true
rusttable-processing.workspace = true
sha2.workspace = true
