[package]
name = "rusttable-pixelpipe"
description = "Pixel pipeline composition boundary for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
rusttable-gpu.workspace = true
rusttable-color.workspace = true
rusttable-core.workspace = true
rusttable-image.workspace = true
rusttable-processing.workspace = true
postcard.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio.workspace = true
