[package]
name = "rusttable-processing"
description = "Compiled operation data for the RustTable processing pipeline."
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rusttable-core = { path = "../rusttable-core", version = "0.1.0" }

[[bench]]
name = "performance_budgets"
harness = false
bench = false
test = false

[lints]
workspace = true
