[package]
name = "rusttable-render"
description = "Pure decoded-image render coordination for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusttable-core = { path = "../rusttable-core", version = "0.1.0" }
rusttable-image = { path = "../rusttable-image", version = "0.1.0" }
rusttable-processing = { path = "../rusttable-processing", version = "0.1.0" }

[lints]
workspace = true
