[package]
name = "rusttable-render"
description = "Pure decoded-image render coordination for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusttable-color.workspace = true
rusttable-core.workspace = true
rusttable-image.workspace = true
rusttable-processing.workspace = true
serde.workspace = true
sha2.workspace = true

[lints]
workspace = true
