[package]
name = "rusttable-scripting"
description = "Bounded, capability-based Lua 5.4 scripting host for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["lua54-vendored"]
lua54-vendored = ["mlua/lua54", "mlua/vendored"]
lua54-system = ["mlua/lua54"]

[dependencies]
futures.workspace = true
mlua.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
