[package]
name = "rusttable-testkit"
description = "Deterministic, bounded, privacy-safe fixture validation for RustTable tests."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
serde = { version = "=1.0.228", features = ["derive"] }
sha2 = { version = "0.10.9", default-features = false }
toml = "=0.9.12"

[lints]
workspace = true
