[package]
name = "rusttable-ui"
description = "GTK4 UI components and presentation models for RustTable."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
gtk4.workspace = true
rusttable-i18n.workspace = true
rusttable-display-profile.workspace = true
rusttable-core.workspace = true
rusttable-input.workspace = true
rusttable-processing.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
