[package]
name = "xtask"
description = "Small product-engineering task runner for RustTable."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
rusttable-parity.workspace = true
rusttable-testkit.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[lints]
workspace = true
